--- a/package.json
+++ b/package.json
@@ -1,39 +1,43 @@
 {
-  "name": "kickstart-meteor-polymer",
-  "version": "2.0.0-alpha",
-  "private": true,
-  "scripts": {
-    "start": "yarn install && meteor run",
-    "weigh": "weigh --path imports/ui/index.html --depth 2",
-    "testdeploy": "deploy/testDeploy.sh",
-    "rundeploy": "deploy/start.sh",
-    "upload": "deploy/upload.sh BaseProject git@adornis.de:/srv/node/BaseProjectDeploy 30"
-  },
-  "dependencies": {
-    "@adornis/polymerredux": "git+ssh://gogs@adornis.de:components/PolymerRedux.git",
-    "@babel/runtime": "^7.0.0-beta.38",
-    "@polymer/app-layout": "^3.0.0-pre.10",
-    "@polymer/app-route": "^3.0.0-pre.10",
-    "@polymer/paper-button": "^3.0.0-pre.10",
-    "@polymer/paper-input": "^3.0.0-pre.10",
-    "@polymer/paper-toggle-button": "^3.0.0-pre.10",
-    "@skatejs/ssr": "^0.15.4",
-    "@types/meteor": "^1.4.13",
-    "@types/redux": "^3.6.0",
-    "@types/redux-devtools-extension": "^2.13.2",
-    "@webcomponents/custom-elements": "github:webcomponents/custom-elements",
-    "@webcomponents/webcomponentsjs": "^1.0.18",
-    "babel-runtime": "^6.26.0",
-    "es6-promise": "^4.1.0",
-    "meteor-node-stubs": "~0.2.0",
-    "redux": "^3.7.2",
-    "redux-persist": "^5.4.0",
-    "window": "^4.2.2"
-  },
-  "devDependencies": {
-    "polymer-weight": "^1.0.3",
-    "tslint": "^5.8.0",
-    "tslint-eslint-rules": "^4.1.1",
-    "typescript": "^2.6.2"
-  }
+    "name": "kickstart-meteor-polymer",
+    "version": "2.0.0-alpha",
+    "private": true,
+    "scripts": {
+        "start":
+            "yarn install && rm -r imports/ui/node_links/@polymer && cp -r node_modules/@polymer/ imports/ui/node_links && find imports/ui/node_links/ -name \"*.js\" -exec bash -c 'mv \"$1\" \"${1%.js}\".ts' - '{}' \\; && meteor run",
+        "weigh": "weigh --path imports/ui/index.html --depth 2",
+        "testdeploy": "deploy/testDeploy.sh",
+        "rundeploy": "deploy/start.sh",
+        "upload":
+            "deploy/upload.sh BaseProject git@adornis.de:/srv/node/BaseProjectDeploy 30"
+    },
+    "dependencies": {
+        "@adornis/polymerredux":
+            "git+ssh://gogs@adornis.de:components/PolymerRedux.git",
+        "@babel/runtime": "^7.0.0-beta.38",
+        "@polymer/app-layout": "^3.0.0-pre.10",
+        "@polymer/app-route": "^3.0.0-pre.10",
+        "@polymer/paper-button": "^3.0.0-pre.10",
+        "@polymer/paper-input": "^3.0.0-pre.10",
+        "@polymer/paper-toggle-button": "^3.0.0-pre.10",
+        "@skatejs/ssr": "^0.15.4",
+        "@types/meteor": "^1.4.13",
+        "@types/redux": "^3.6.0",
+        "@types/redux-devtools-extension": "^2.13.2",
+        "@webcomponents/custom-elements":
+            "github:webcomponents/custom-elements",
+        "@webcomponents/webcomponentsjs": "^1.0.18",
+        "babel-runtime": "^6.26.0",
+        "es6-promise": "^4.1.0",
+        "meteor-node-stubs": "~0.2.0",
+        "redux": "^3.7.2",
+        "redux-persist": "^5.4.0",
+        "window": "^4.2.2"
+    },
+    "devDependencies": {
+        "polymer-weight": "^1.0.3",
+        "tslint": "^5.8.0",
+        "tslint-eslint-rules": "^4.1.1",
+        "typescript": "^2.6.2"
+    }
 }
